@@ -43,8 +43,6 @@ body {
   max-width: 80%;
   min-height: 80vh;
   margin: 0 auto;
-  width: 100%;
-  flex: 1;
   display: flex;
   flex-direction: column;
   background: linear-gradient(
@@ -55,9 +53,11 @@ body {
   );
   padding: 20px;
   box-sizing: border-box;
-  box-shadow: 0 0 100px rgba(0, 255, 255, 0.2), 0 0 60px rgba(0, 255, 255, 0.1);
+  box-shadow: 
+    0 0 100px rgba(0, 255, 255, 0.2),
+    0 0 60px rgba(0, 255, 255, 0.1),
+    inset 0 0 200px black;
   border-radius: 10px;
-  min-width: 0;
 }
 
 header,
